Styling fixed
Fixed overlapping game card

--- a/src/index.scss
+++ b/src/index.scss
@@ -193,7 +193,7 @@ ul, li {
 
 .game-card {
   position: relative;
-  top: 420px;
+  top: 370px;
   left:0;
   right:0;
   text-align: center;
